# apple-leaf-disease-classifier

./: .dvcignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.dvc/: config
apple_leaf_disease/: commands.py  datamodule.py  dataset.py  dvc_utils.py  train.py
apple_leaf_disease/models/: lightning_module.py  nets.py
configs/: config.yaml
configs/augment/: default.yaml
configs/data/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: baseline.yaml  resnet18.yaml
configs/train/: default.yaml
data/: raw.dvc
